# ClawGuard

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: Dockerfile  config.py  conftest.py  main.py  pyproject.toml  requirements.txt
backend/api/: dashboard.py  scan.py  ws.py
backend/audit/: db.py  logger.py  models.py
backend/demo/: attacker.py  mock_server.py  scenarios.py
backend/detection/: engine.py  llm_detector.py  patterns.py  regex_detector.py
backend/policies/: default.yaml
backend/policy/: engine.py  loader.py  models.py
backend/proxy/: client.py  handler.py
backend/tests/: test_demo_scenarios.py  test_engine.py  test_llm_detector.py  test_patterns.py  test_policy.py  test_proxy_integration.py  test_scoring.py
backend/tests/fixtures/: test_policy.yaml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: RiskBadge.tsx  StatsCards.tsx  ThreatTimeline.tsx  TrafficFeed.tsx
frontend/hooks/: useWebSocket.ts
frontend/lib/: api.ts  types.ts
sdk/: pyproject.toml
sdk/clawguard/: __init__.py  client.py  decorators.py  exceptions.py  types.py
sdk/clawguard/frameworks/: crewai.py  langchain.py
sdk/tests/: test_client.py  test_decorators.py
specs/001-clawguard/: spec.md  tasks.md
