[project]
name = "clawguard"
version = "0.1.0"
description = "Python SDK for ClawGuard — AI Agent Firewall"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]
license = "MIT"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
